Fixed text alignment for accordions in collections list modal

--- a/public/css/collections.css
+++ b/public/css/collections.css
@@ -329,6 +329,7 @@ button {
 
 .acc-btn {
   width: 100%;
+  text-align: start;
   background: #0c0c1a;
   color: #e9e9f3;
   border: 0;
